[gd_scene load_steps=8 format=2]

[ext_resource path="res://scn/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scn/background_player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scn/let_spawner.gd" type="Script" id=4]
[ext_resource path="res://scn/let2.tscn" type="PackedScene" id=5]
[ext_resource path="res://scn/let1.tscn" type="PackedScene" id=6]
[ext_resource path="res://scn/main.gd" type="Script" id=7]

[node name="main" type="Node2D"]
script = ExtResource( 7 )

[node name="ControlMain" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -512.0
margin_right = 300.0
margin_bottom = 512.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ControlMain"]
margin_right = 600.0
margin_bottom = 1024.0
mouse_filter = 2
color = Color( 0.215686, 0.964706, 1, 1 )

[node name="background_player" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="player" parent="." instance=ExtResource( 1 )]

[node name="let_spawner" type="Node2D" parent="."]
script = ExtResource( 4 )
lets = [ ExtResource( 6 ), ExtResource( 5 ) ]

[node name="Timer" type="Timer" parent="let_spawner"]
autostart = true

[node name="Restart" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -512.0
margin_right = 300.0
margin_bottom = 512.0
mouse_filter = 2

[node name="restart_cont" type="MarginContainer" parent="Restart"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="Restart/restart_cont"]
margin_right = 600.0
margin_bottom = 1024.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Restart/restart_cont/CenterContainer"]
margin_left = 204.0
margin_top = 488.0
margin_right = 395.0
margin_bottom = 536.0
mouse_filter = 2

[node name="Button" type="Button" parent="Restart/restart_cont/CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 224.0
margin_bottom = 94.0
mouse_filter = 1
custom_colors/font_color = Color( 0.223529, 0.956863, 0.192157, 1 )
custom_colors/font_color_pressed = Color( 0.843137, 0.839216, 0.839216, 1 )
custom_fonts/font = ExtResource( 2 )
text = "RESTART"
flat = true

[node name="score" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -512.0
margin_right = 300.0
margin_bottom = 512.0
mouse_filter = 2

[node name="score_margin" type="MarginContainer" parent="score"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -517.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="score/score_margin"]
margin_right = 600.0
margin_bottom = 507.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="score/score_margin/CenterContainer"]
margin_left = 182.0
margin_top = 232.0
margin_right = 418.0
margin_bottom = 274.0
mouse_filter = 2

[node name="Label" type="Label" parent="score/score_margin/CenterContainer/VBoxContainer"]
margin_right = 236.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
text = "Your_score:"

[connection signal="tree_exited" from="player" to="." method="_on_player_tree_exited"]
[connection signal="timeout" from="let_spawner/Timer" to="let_spawner" method="_on_Timer_timeout"]
[connection signal="pressed" from="Restart/restart_cont/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
